--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Montserrat&display=swap" rel="stylesheet">
     <script type="text/javascript" src="js/script.js" async></script>
+    <script src="main.js"></script>
 </head>
 <body>
     <header>
