--- a/index.html
+++ b/index.html
@@ -8,26 +8,25 @@
     <title>Just Stream It !</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Montserrat&display=swap" rel="stylesheet">
-    <script type="text/javascript" src="js/script.js" async></script>
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro&display=swap" rel="stylesheet">
+    <script type="text/javascript" src="js/script.js" ></script>
 </head>
 <body>
     <header>
-        <nav>
+        <nav role = "navigation">
             <a href="index.html" class="icons">
                 <img src="images/logo.png" alt="Logo JustStreamIt" id="logo">
             </a>
             <div>
                 <a href="index.html">Home</a>
-                <a href="#">Categories</a>
             </div>
         </nav>
     </header>
     <main>
         <section class="best" id="movie-cover">
             <div class="movie-cover">
-                <img alt="best movie cover" id="best-cover-img" class="img-cover" src="images/refresh.png">
-                <h1 id="best-cover-title"></h1>
+                <img alt="best movie cover" id="best-cover-img" class="img-cover">
+                <h1 id="title"></h1>
                 <p id="best-cover-description"></p>
             </div>
             <div>
