--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro&display=swap" rel="stylesheet">
     <script type="text/javascript" src="js/script.js" ></script>
+        <script type="text/javascript" src="js/carousel.js" ></script>
+
 </head>
 <body>
     <header>
@@ -34,37 +36,13 @@
                 <button class="button-info" id="more-info-btn">More infos</button>
             </div>
         </section>
-        <section class="top-rated" id="top-rated-movies">
+
             <div class="carousel-container">
-                <h2 id="title-best-movies">Top rated movies</h2>
-                    <div class="best-carousel"></div>
+
                     <button class="carousel-prev">&lt;</button>
                     <button class="carousel-next">&gt;</button>
-            </div>
-        </section>
-        <section class="category1" id="first-category">
-            <div class="carousel-container">
-                <h2 id="title-best-sci-fi-movies">Best Sci-Fi movies</h2>
-                    <div class="sci-fi-carousel"></div>
-                    <button class="carousel-prev">&lt;</button>
-                    <button class="carousel-next">&gt;</button>
-            </div>
-        </section>
-        <section class="category2" id="second-category">
-            <div class="carousel-container">
-                <h2 id="title-best-comedy-movies">Best Comedy movies</h2>
-                    <div class="comedy-carousel"></div>
-                    <button class="carousel-prev">&lt;</button>
-                    <button class="carousel-next">&gt;</button>
-            </div>
-        </section>
-        <section class="category3" id="third-category">
-            <div class="carousel-container">
-                <h2 id="title-best-Adventures-movies">Best Adventures movies</h2>
-                    <div class="Adventure-carousel"></div>
-                    <button class="carousel-prev">&lt;</button>
-                    <button class="carousel-next">&gt;</button>
-            </div>
+
+
         </section>
         <div class="modal" id="modal">
             <div class="modal-content">
@@ -74,6 +52,8 @@
                 <strong>Genre : </strong>
                 <p class="genres" id="modal-genres"></p>
                 <strong>Release date : </strong>
+
+
                 <p id="modal-date"></p>
                 <strong>Rated : </strong>
                 <p id="modal-rated"></p>
