--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="fr" xmlns="http://www.w3.org/1999/html">
 
 <head>
     <meta charset="utf-8">
@@ -8,8 +8,7 @@
     <title>Just Stream It !</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
-
+    <script type="text/javascript" src="js/carousel.js" ></script>
     <script type="text/javascript" src="js/script.js" ></script>
 
 
@@ -28,81 +27,40 @@
         </nav>
     </header>
     <main>
-        <section class="best" id="movie-cover">
-            <div class="movie-cover">
-                <img alt="best movie cover" id="best-movie-img" class="img-cover">
-                <h1 id="titlebestmovies"></h1>
-                <p id="best-movie-description"></p>
-            </div>
+        <div class="best" id="movie-cover">
+            <img alt="best movie cover" id="best-movie-img" class="img-cover">
+            <h1 id="best-movie-title"></h1>
+            <p id="best-movie-description"></p>
+            <button onclick="showModal('Best')">More-info</button>
+        </div>
 
-            <div>
-                <button class="button-play">Play</button>
-                <button class="button-info" id="more-info-btn">More infos</button>
+        <div class="container">
+            <h1>Top Rated Movies</h1>
+            <div class="carousel" id="comedyCarousel">
+              <h1>Best Comedy Movies</h1>
+                <!-- Comedy Movies will be inserted here -->
+                <button onclick="showModal('Comedy')">Comedy</button>
             </div>
-        </section>
-        <section class="top-rated" id="top-rated-movies">
-            <div class="carousel-container">
-                <h2 id="title-best-movies">Top rated movies</h2>
-                    <div class="best-carousel"></div>
-                    <button class="carousel-prev">&lt;</button>
-                    <button class="carousel-next">&gt;</button>
+            <div class="carousel" id="sciFiCarousel">
+              <h1>Best Sci-Fi Movies</h1>
+                <!-- Sci-Fi Movies will be inserted here -->
             </div>
-        </section>
-        <section class="category1" id="first-category">
-            <div class="carousel-container">
-                <h2 id="title-best-sci-fi-movies">Best Sci-Fi movies</h2>
-                    <div class="sci-fi-carousel"></div>
-                    <button class="carousel-prev">&lt;</button>
-                    <button class="carousel-next">&gt;</button>
-            </div>
-        </section>
-        <section class="category2" id="second-category">
-            <div class="carousel-container">
-                <h2 id="title-best-comedy-movies">Best Comedy movies</h2>
-                    <div class="comedy-carousel"></div>
-                    <button class="carousel-prev">&lt;</button>
-                    <button class="carousel-next">&gt;</button>
-            </div>
-        </section>
-        <section class="category3" id="third-category">
-            <div class="carousel-container">
-                <h2 id="title-best-romance-movies">Best Romance movies</h2>
-                    <div class="romance-carousel"></div>
-                    <button class="carousel-prev">&lt;</button>
-                    <button class="carousel-next">&gt;</button>
-
-
-        </section>
-        <div class="modal" id="modal">
-            <div class="modal-content">
-                <span aria-label="close modal" class="close">&times;</span>
-                <img alt="movie cover" id="modal-cover" src="#">
-                <h3 id="modal-title"></h3>
-                <strong>Genre : </strong>
-                <p class="genres" id="modal-genres"></p>
-                <strong>Release date : </strong>
-
-
-                <p id="modal-date"></p>
-                <strong>Rated : </strong>
-                <p id="modal-rated"></p>
-                <strong>IMDB Score : </strong>
-                <p id="modal-imdb"></p>
-                <strong>Director(s) : </strong>
-                <p id="modal-directors"></p>
-                <strong>Casting : </strong>
-                <p id="modal-cast"></p>
-                <strong>Duration : </strong>
-                <p id="modal-duration"></p>
-                <strong>Origin country : </strong>
-                <p id="modal-country"></p>
-                <strong>Box-office : </strong>
-                <p id="modal-box-office"></p>
-                <strong>Summary : </strong><br>
-                <p id="modal-info"></p>
+            <div class="carousel" id="romanceCarousel">
+              <h1>Best Romance Movies</h1>
+                <!-- Romance Movies will be inserted here -->
             </div>
         </div>
-    </main>
+
+        <!-- Modal -->
+        <div id="myModal" class="modal">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <div id="modalBody">
+                    <!-- Modal Content will be inserted here -->
+                </div>
+            </div>
+        </div>
+        </main>
     <footer>
         <a href="index.html" class="icons">
             <img src="images/logo.png" alt="Logo JustStreamIt" id="logo">
