v 0.5 rajout top_rated (enlever doublon) manque affichage horizontal et boutons sur affiches de films avec activation de la fenetre modale(revoir le script)

--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
         </div>
 
         <div class="container">
+             <div class="carousel" id="Top_RatedCarousel">
             <h1>Top Rated Movies</h1>
+                <button onclick="showModal('Top_Rated')">Top Rated</button>
+            </div>
             <div class="carousel" id="comedyCarousel">
               <h1>Best Comedy Movies</h1>
                 <!-- Comedy Movies will be inserted here -->
