v 0.6 rajout top_rated ok affichage horizontal manque boutons sur affiches de films avec activation de la fenetre modale(revoir le script)

--- a/index.html
+++ b/index.html
@@ -35,20 +35,20 @@
         </div>
 
         <div class="container">
-             <div class="carousel" id="Top_RatedCarousel">
+             <div class="carousel-container" id="Top_RatedCarousel">
             <h1>Top Rated Movies</h1>
                 <button onclick="showModal('Top_Rated')">Top Rated</button>
             </div>
-            <div class="carousel" id="comedyCarousel">
-              <h1>Best Comedy Movies</h1>
-                <!-- Comedy Movies will be inserted here -->
-                <button onclick="showModal('Comedy')">Comedy</button>
+            <div class="carousel-container" id="thrillerCarousel">
+              <h1>Best thriller Movies</h1>
+                <!-- thriller Movies will be inserted here -->
+                <button onclick="showModal('thriller')">thriller</button>
             </div>
-            <div class="carousel" id="sciFiCarousel">
+            <div class="carousel-container" id="sciFiCarousel">
               <h1>Best Sci-Fi Movies</h1>
                 <!-- Sci-Fi Movies will be inserted here -->
             </div>
-            <div class="carousel" id="romanceCarousel">
+            <div class="carousel-container" id="romanceCarousel">
               <h1>Best Romance Movies</h1>
                 <!-- Romance Movies will be inserted here -->
             </div>
