--- a/index.html
+++ b/index.html
@@ -1,17 +1,10 @@
 <!DOCTYPE html>
-<html lang="fr" xmlns="http://www.w3.org/1999/html">
-
+<html lang="en">
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/style.css" type="text/css" rel="stylesheet">
     <title>Just Stream It !</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <script type="text/javascript" src="js/carousel.js" ></script>
-    <script type="text/javascript" src="js/script.js" ></script>
-
-
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
@@ -20,54 +13,45 @@
                 <a href="index.html" class="icons">
                     <img src="images/logo.png" alt="Logo JustStreamIt" id="logo">
                 </a>
-                <a href="index.html" class="menu"> Home </a>
+                <a href="index.html" class="menu"> Accueil </a>
                 <a href="#"  class="menu"> Categories</a>
             </div>
             <input type="text" class="search" placeholder="Rechercher un film ou une série" >
         </nav>
     </header>
-    <main>
-        <div class="best" id="movie-cover">
-            <img alt="best movie cover" id="best-movie-img" class="img-cover">
-            <h1 id="best-movie-title"></h1>
-            <p id="best-movie-description"></p>
-            <button onclick="showModal('Best')">More-info</button>
-        </div>
+    <div id="Best-movies" class="movies-container">
+        <h1>Best Movies</h1>
+        <p id="best-movie-description"></p>
+        <div class="movies"></div>
+    </div>
+    <div id="top-movies" class="movies-container">
+        <h2>Top Movies</h2>
+        <div class="movies"></div>
+    </div>
 
-        <div class="container">
-             <div class="carousel-container" id="Top_RatedCarousel">
-            <h1>Top Rated Movies</h1>
-                <button onclick="showModal('Top_Rated')">Top Rated</button>
-            </div>
-            <div class="carousel-container" id="thrillerCarousel">
-              <h1>Best thriller Movies</h1>
-                <!-- thriller Movies will be inserted here -->
-                <button onclick="showModal('thriller')">thriller</button>
-            </div>
-            <div class="carousel-container" id="sciFiCarousel">
-              <h1>Best Sci-Fi Movies</h1>
-                <!-- Sci-Fi Movies will be inserted here -->
-            </div>
-            <div class="carousel-container" id="romanceCarousel">
-              <h1>Best Romance Movies</h1>
-                <!-- Romance Movies will be inserted here -->
-            </div>
-        </div>
+    <div id="sci-fi-movies" class="movies-container">
+        <h2>Sci-Fi Movies</h2>
+        <div class="movies"></div>
+    </div>
 
-        <!-- Modal -->
-        <div id="myModal" class="modal">
-            <div class="modal-content">
-                <span class="close">&times;</span>
-                <div id="modalBody">
-                    <!-- Modal Content will be inserted here -->
-                </div>
-            </div>
+    <div id="romance-movies" class="movies-container">
+        <h2>Romance Movies</h2>
+        <div class="movies"></div>
+    </div>
+
+    <div id="drama-movies" class="movies-container">
+        <h2>Drama Movies</h2>
+        <div class="movies"></div>
+    </div>
+
+    <div id="modal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <div id="modal-info"></div>
         </div>
-        </main>
-    <footer>
-        <a href="index.html" class="icons">
-            <img src="images/logo.png" alt="Logo JustStreamIt" id="logo">
-        </a>
-    </footer>
+    </div>
+
+
+    <script src="js/script.js"></script>
 </body>
 </html>
