v 1 def. script js ok pour afficher films description apparente pour le best movies

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         </div>
     </div>
 
+    <script src="js/bestmoviedescription.js"></script>
 
     <script src="js/script.js"></script>
 </body>
