--- a/index.html
+++ b/index.html
@@ -28,22 +28,24 @@
         </nav>
     </header>
     <div id="Best-movies" class="best-movies-container">
-        <div class="movies"></div>
+
             <p id="best-movie-description"></p>
             <h1 id="bestTitle"</h1>
 
             <button id="button_play"></button>
             <p id="bestDescription"></p>
             <div id="best">
-                <div class="bestCover-in-top"></div>
-                    <img src=""  class="bestCover" id="bestImage"/>
+                <!-- <div class="bestCover-in-top"> -->
+
                     <div class="bestCover-in-middle">
+                        <img src=""  class="bestCover" id="bestImage"/>
+                    <!-- </div> -->
                         <button id="btn-best-movie" ></button>
-                    </div>
                 </div>
             </div>
-        </div>
+            
     </div>
+
 
    
 
